version 0.60 release
21/02/2018
	- set up mail settings using localhost port 25 (margaretha)
	- added mail template in kustvakt configuration (margaretha)
	- added mail settings to readme (margaretha)
	- disabled email notification for auto group (margaretha)

version 0.59.10	
20/02/2018 
	- added sort VC by id (margaretha)
	- added test cases regarding VC sharing (margaretha)
	- implemented withdraw VC from publication (margaretha)
	- added Changes file (margaretha)
	- implemented add/invite users to group (margaretha)
	- implemented delete user-group and member tasks (margaretha)
	- added userMemberStatus in group lists (margaretha)
	- updated and added SQL test data (margaretha)
	- added user group related tests (margaretha)
	- implemented custom configuration for deleting user groups and members (margaretha)
	- updated library versions and java environment (margaretha)
	- added expiration time check for member invitation (margaretha)
	- moved .properties files (margaretha) 
	- merged changelog file to Changes (margaretha)
	- updated status codes and error messages to be more detailed (margaretha)
	- testing mail implementation using embedded jetty jndi (margaretha)
	- fixed collection rewrite regarding OR operation with other fields (margaretha)
	- implemented sending mail using spring injection and removed jetty jndi (margaretha)
	- fixed unrecognized application/json (margaretha)
	- fixed and updated velocity template (margaretha)
	
version 0.59.9 
19/01/2018
	- restructured basic authentication (margaretha)
	- fixed AuthenticationException to include authentication scheme (margaretha)
	- fixed rewrite redundancy in collection rewrite (margaretha)
	- fixed foundry rewrite for constituents (margaretha)
	- introduced authentication methods, schemes and tokens (margaretha)
	- implemented collection rewrite with multiple licenses (margaretha)
	- fixed foundry rewrite for korap span without wrap node (margaretha)
	- implemented list user group (margaretha)