@@ -18,6 +18,7 @@ server.host=localhost
 mail.enabled = false
 mail.receiver = test@localhost
 mail.sender = noreply@ids-mannheim.de
+mail.address.retrieval = test
 
 ## mail.templates
 template.group.invitation = notification.vm
