@@ -1,9 +1,11 @@
 version 0.60 release
-21/02/2018
+26/02/2018
 	- set up mail settings using localhost port 25 (margaretha)
 	- added mail template in kustvakt configuration (margaretha)
 	- added mail settings to readme (margaretha)
 	- disabled email notification for auto group (margaretha)
+	- added metadata retrieval (diewald)
+	- enabled custom implementation for email address retrieval (margaretha)
 
 version 0.59.10	
 20/02/2018 
